Binary classifier for rice grains

--- a/ml/cc/exercises/binary_classification_rice.ipynb
+++ b/ml/cc/exercises/binary_classification_rice.ipynb
@@ -1,6 +1,16 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/shahmeerkhan12/Machine-Learning/blob/main/ml/cc/exercises/binary_classification_rice.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [
         "#@title Copyright 2023 Google LLC. Double-click for license information.\n",
@@ -3096,6 +3106,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
+        "cellView": "form",
         "outputId": "8d73a19a-def3-4326-f845-ec169527b902"
       },
       "outputs": [
@@ -3111,6 +3122,7 @@
         }
       ],
       "source": [
+        "# @title\n",
         "ml_edu.results.compare_experiment([experiment, experiment_all_features],\n",
         "                                  ['accuracy', 'auc'],\n",
         "                                  test_features, test_labels)"
@@ -3128,7 +3140,8 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
