--- a/neural_Networks.ipynb
+++ b/neural_Networks.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPke5s/GrFGbQ+Zd++qator",
+      "authorship_tag": "ABX9TyOK+OtpLjrzDZLLqoel/EW8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,22 +28,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 5,
       "metadata": {
         "id": "oarpeeF8T22b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d76df8c3-1631-4e00-900e-ab6928d5ca5a"
+        "outputId": "73d91d71-e879-4c53-9a20-069917b8fc30"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[ 0.17640523  0.04001572  0.0978738 ]\n",
-            " [ 0.22408932  0.1867558  -0.09772779]\n",
-            " [ 0.09500884 -0.01513572 -0.01032189]]\n"
+            "[[0.07339395 0.85908639 0.17316151 0.29562326 0.17385307]\n",
+            " [0.32825362 0.68881268 0.33103156 0.50341013 0.4141685 ]\n",
+            " [0.10758131 1.03983522 0.24462411 0.31821498 0.18851053]]\n",
+            "\n",
+            "[[ 0.12282912 -0.06413357]\n",
+            " [ 0.11666311 -0.02637691]\n",
+            " [ 0.148296   -0.08397602]]\n"
           ]
         }
       ],
@@ -60,11 +64,21 @@
         "  # for initialization specify the inputs_shape, and the number of the neurons( neurons can be any count)\n",
         "  def __init__(self, n_inputs, n_neurons):\n",
         "    self.weights = 0.1*np.random.randn(n_inputs,n_neurons)\n",
-        "    self.bias = np.zeros((1,n_neurons))\n",
-        "  def forward(self):\n",
-        "    pass\n",
+        "    self.biases = np.zeros((1,n_neurons))\n",
+        "  def forward(self,inputs):\n",
+        "    self.output = np.dot(inputs,self.weights) + self.biases\n",
         "\n",
-        "# print(0.1*np.random.randn(3,3))\n",
+        "layer1 = layer_dense(4,5)\n",
+        "layer2 = layer_dense(5,2)\n",
+        "\n",
+        "layer1.forward(X)\n",
+        "layer2.forward(layer1.output)\n",
+        "\n",
+        "print(layer1.output)\n",
+        "print()\n",
+        "print(layer2.output)\n",
+        "\n",
+        "\n",
         "\n"
       ]
     }
