Added headings and Modified Code for model performance Visualization

--- a/deep_recommendation_sys.ipynb
+++ b/deep_recommendation_sys.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "provenance": [],
       "gpuType": "V28",
-      "authorship_tag": "ABX9TyPF65XT3oZj/4D7AG+2t5c8",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyPfB4iHV7EdDHcl99zRDg/+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,8 +30,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Installing dependencies"
+      ],
+      "metadata": {
+        "id": "oT3znV3u4PgX"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "BKtz-Vzxx7f-"
       },
@@ -53,7 +63,7 @@
         "id": "zrrBtXZByYyU",
         "outputId": "cbad181b-4ceb-4f7b-a894-2d38c2bee9c6"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -269,6 +279,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Loading Dataset\n"
+      ],
+      "metadata": {
+        "id": "8Q5bxQoc4vaq"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "!mkdir ~/.kaggle\n",
@@ -284,7 +303,7 @@
         },
         "outputId": "c31a3861-84e4-4f11-b9de-29086088f5a4"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -315,7 +334,7 @@
       "metadata": {
         "id": "imlLxgaRSPg9"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -333,7 +352,7 @@
         "id": "jtj0HXyYoibM",
         "outputId": "06a728a2-02dd-47e9-f167-6cc5262386cd"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -412,6 +431,37 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Prepare Data for Model\n"
+      ],
+      "metadata": {
+        "id": "JLEHRz0F5l_J"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "lf1GEJCI5-Mk"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "```\n",
+        "# This is formatted as code\n",
+        "```\n",
+        "\n",
+        "# processing the data for NCF"
+      ],
+      "metadata": {
+        "id": "OQ_OgTzC5-1M"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "def prepare_ncf_data(data):\n",
@@ -434,8 +484,17 @@
       "metadata": {
         "id": "HLe7KXvzTf8g"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Build the NCF model"
+      ],
+      "metadata": {
+        "id": "NYTaPzrV5j4C"
+      }
     },
     {
       "cell_type": "code",
@@ -466,8 +525,24 @@
       "metadata": {
         "id": "R4JV1F0q8D5j"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "Uk-iMs0F6J23"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Data Exploration Visualization"
+      ],
+      "metadata": {
+        "id": "9SucJRd66KaL"
+      }
     },
     {
       "cell_type": "code",
@@ -554,7 +629,7 @@
         },
         "outputId": "8a5d75ed-4fe9-46ae-a453-d3700c50f488"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -575,6 +650,22 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "HuzvgRUv6XZ9"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Visualizing the Model performance"
+      ],
+      "metadata": {
+        "id": "-MfN9hwG6X0n"
+      }
     },
     {
       "cell_type": "code",
@@ -605,8 +696,24 @@
       "metadata": {
         "id": "kDU1xRI7umdU"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "F6L1EWLg6ggd"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Main Function"
+      ],
+      "metadata": {
+        "id": "p2WootTY6g0A"
+      }
     },
     {
       "cell_type": "code",
@@ -649,7 +756,7 @@
         },
         "outputId": "d25c90bb-2792-42ef-a102-750a95a5a28d"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
