another method for removing any missing values

--- a/pandas/missingDataPandas.ipynb
+++ b/pandas/missingDataPandas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "69519fc6-27b7-46ae-8e8a-2c977ab9127f",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "678f1fc1-f328-4de0-8eef-69f6e96250f2",
    "metadata": {},
    "outputs": [],
@@ -259,11 +259,93 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c58727a3-5b72-44bc-a182-f27d39338fde",
+   "cell_type": "markdown",
+   "id": "a03d962b-d2af-4c96-9e54-c4cf8eeb789f",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "pandas can also drop the nan values: for example "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "75eb4e8b-124f-41f0-92d1-21bf364dc143",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>electonic</th>\n",
+       "      <th>grocery</th>\n",
+       "      <th>food-items</th>\n",
+       "      <th>Price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>mobiles</td>\n",
+       "      <td>detergents</td>\n",
+       "      <td>chicken</td>\n",
+       "      <td>15.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>laptops</td>\n",
+       "      <td>vigitables</td>\n",
+       "      <td>juice</td>\n",
+       "      <td>30.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>router</td>\n",
+       "      <td>medicine</td>\n",
+       "      <td>rice</td>\n",
+       "      <td>90.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  electonic     grocery food-items  Price\n",
+       "0   mobiles  detergents    chicken   15.0\n",
+       "2   laptops  vigitables      juice   30.0\n",
+       "5    router    medicine       rice   90.0"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#all the rows containing any nan wil be removed \n",
+    "missingValues.dropna()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb891233-cf66-4ecb-83f9-c108ecc7b425",
+   "metadata": {},
    "source": []
   }
  ],
