--- a/pandas/add_remove_col.ipynb
+++ b/pandas/add_remove_col.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "968c26a1-459b-45d5-97dc-2520af5d8476",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "af39af96-11f9-401c-9085-3c5591f7b5ac",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "a01f089b-ebb3-4c38-8d05-58f048dbfc38",
    "metadata": {},
    "outputs": [],
@@ -635,9 +635,180 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cfa0690e-f3de-4eca-9dcf-aa4299fe7e77",
+   "metadata": {},
+   "source": [
+    "# removing column "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "8ccc95bd-35de-4699-b6c4-f53c2f66141b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "phonesData.drop('battery',axis=1, inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "86bd804e-09da-422b-82be-9b8ca65f7fc9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Phone Name</th>\n",
+       "      <th>Manufacturer</th>\n",
+       "      <th>Storage</th>\n",
+       "      <th>Memory</th>\n",
+       "      <th>Price (USD)</th>\n",
+       "      <th>Internet Network</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Galaxy S22 Ultra</td>\n",
+       "      <td>Samsung</td>\n",
+       "      <td>512GB</td>\n",
+       "      <td>12GB</td>\n",
+       "      <td>1099</td>\n",
+       "      <td>5G</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>iPhone 14 Pro</td>\n",
+       "      <td>Apple</td>\n",
+       "      <td>256GB</td>\n",
+       "      <td>6GB</td>\n",
+       "      <td>999</td>\n",
+       "      <td>5G</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Pixel 7</td>\n",
+       "      <td>Google</td>\n",
+       "      <td>128GB</td>\n",
+       "      <td>8GB</td>\n",
+       "      <td>599</td>\n",
+       "      <td>5G</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>OnePlus 10T</td>\n",
+       "      <td>OnePlus</td>\n",
+       "      <td>256GB</td>\n",
+       "      <td>16GB</td>\n",
+       "      <td>649</td>\n",
+       "      <td>5G</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Redmi Note 11</td>\n",
+       "      <td>Xiaomi</td>\n",
+       "      <td>128GB</td>\n",
+       "      <td>4GB</td>\n",
+       "      <td>249</td>\n",
+       "      <td>4G LTE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Moto G Power</td>\n",
+       "      <td>Motorola</td>\n",
+       "      <td>64GB</td>\n",
+       "      <td>4GB</td>\n",
+       "      <td>199</td>\n",
+       "      <td>4G LTE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Nokia G400</td>\n",
+       "      <td>Nokia</td>\n",
+       "      <td>128GB</td>\n",
+       "      <td>6GB</td>\n",
+       "      <td>299</td>\n",
+       "      <td>5G</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>P50 Pro</td>\n",
+       "      <td>Huawei</td>\n",
+       "      <td>256GB</td>\n",
+       "      <td>8GB</td>\n",
+       "      <td>899</td>\n",
+       "      <td>4G LTE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Oppo Find X5</td>\n",
+       "      <td>Oppo</td>\n",
+       "      <td>256GB</td>\n",
+       "      <td>12GB</td>\n",
+       "      <td>799</td>\n",
+       "      <td>5G</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Vivo X80</td>\n",
+       "      <td>Vivo</td>\n",
+       "      <td>512GB</td>\n",
+       "      <td>12GB</td>\n",
+       "      <td>749</td>\n",
+       "      <td>5G</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Phone Name Manufacturer Storage Memory  Price (USD) Internet Network\n",
+       "0  Galaxy S22 Ultra      Samsung   512GB   12GB         1099               5G\n",
+       "1     iPhone 14 Pro        Apple   256GB    6GB          999               5G\n",
+       "2           Pixel 7       Google   128GB    8GB          599               5G\n",
+       "3       OnePlus 10T      OnePlus   256GB   16GB          649               5G\n",
+       "4     Redmi Note 11       Xiaomi   128GB    4GB          249           4G LTE\n",
+       "5      Moto G Power     Motorola    64GB    4GB          199           4G LTE\n",
+       "6        Nokia G400        Nokia   128GB    6GB          299               5G\n",
+       "7           P50 Pro       Huawei   256GB    8GB          899           4G LTE\n",
+       "8      Oppo Find X5         Oppo   256GB   12GB          799               5G\n",
+       "9          Vivo X80         Vivo   512GB   12GB          749               5G"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "phonesData"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea6ec04b-1391-49f6-b9e6-5434ef5b3c88",
+   "id": "56b55257-cedf-4d9a-afb7-b80233aa0c9d",
    "metadata": {},
    "outputs": [],
    "source": []
