how to convert a matrix into a DataFrame

--- a/numpy/conversion_df.ipynb
+++ b/numpy/conversion_df.ipynb
@@ -4,7 +4,12 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "3cd95118-53d1-4579-8913-d81fda217f4f",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np"
@@ -14,7 +19,12 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "8ca0ef1b-9984-43f0-bc77-8af4493daa95",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -42,7 +52,12 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "9686950c-ebd5-4880-8a9e-c699c995e107",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -67,7 +82,12 @@
    "cell_type": "code",
    "execution_count": 18,
    "id": "e0cf59a4-842e-4c58-b972-e906950c8f70",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -95,10 +115,162 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b8e52ffd-23e0-438b-bc27-12bae9db8ddb",
+   "metadata": {},
+   "source": [
+    "# turning array into dataFrame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "7a240672-4fd0-4c5d-a92a-cf999df2795d",
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "c2a205e6-c980-4256-a87e-1fd94194471a",
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# convert to dataframe\n",
+    "data = pd.DataFrame(matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "67f2c4ec-9cfa-4836-8007-dd2f3e5ab0f1",
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.787996</td>\n",
+       "      <td>0.284039</td>\n",
+       "      <td>0.314334</td>\n",
+       "      <td>0.379316</td>\n",
+       "      <td>0.565505</td>\n",
+       "      <td>0.624505</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.318143</td>\n",
+       "      <td>0.584658</td>\n",
+       "      <td>0.894332</td>\n",
+       "      <td>0.760176</td>\n",
+       "      <td>0.652618</td>\n",
+       "      <td>0.603260</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.960712</td>\n",
+       "      <td>0.052742</td>\n",
+       "      <td>0.358759</td>\n",
+       "      <td>0.083238</td>\n",
+       "      <td>0.719709</td>\n",
+       "      <td>0.376302</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.862850</td>\n",
+       "      <td>0.964014</td>\n",
+       "      <td>0.785521</td>\n",
+       "      <td>0.968512</td>\n",
+       "      <td>0.098047</td>\n",
+       "      <td>0.084725</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.209611</td>\n",
+       "      <td>0.751183</td>\n",
+       "      <td>0.505026</td>\n",
+       "      <td>0.950308</td>\n",
+       "      <td>0.431548</td>\n",
+       "      <td>0.962498</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          0         1         2         3         4         5\n",
+       "0  0.787996  0.284039  0.314334  0.379316  0.565505  0.624505\n",
+       "1  0.318143  0.584658  0.894332  0.760176  0.652618  0.603260\n",
+       "2  0.960712  0.052742  0.358759  0.083238  0.719709  0.376302\n",
+       "3  0.862850  0.964014  0.785521  0.968512  0.098047  0.084725\n",
+       "4  0.209611  0.751183  0.505026  0.950308  0.431548  0.962498"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b419919-a2bf-4966-bba3-24b2a5ced72f",
-   "metadata": {},
+   "id": "fc8986f4-aee4-47b5-9d48-2705757d2b7e",
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [],
    "source": []
   }
