slicing matrix by rows and columns

--- a/numpy/accessingAndSlicing.ipynb
+++ b/numpy/accessingAndSlicing.ipynb
@@ -168,8 +168,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "f5b351d1-e87f-4d0d-98b8-aad7dcd0b668",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[5]],\n",
+       "\n",
+       "       [[4]]], dtype=int32)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matrix[:2,:1,:1] # the 3rd arg say 10 show only first column of the matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55921576-f467-415e-9c7b-16938b556bdf",
    "metadata": {},
    "outputs": [],
    "source": []
