mean, variance and standard deviation

--- a/numpy/aggregation.ipynb
+++ b/numpy/aggregation.ipynb
@@ -20,30 +20,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "e4e174da-3290-4027-8305-136f0be47291",
    "metadata": {},
    "outputs": [],
    "source": [
+    "np.random.seed(0)\n",
     "matrix = np.random.random(1000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "87dce48d-6464-4826-b817-7a99da0efad6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.40200701, 0.66190443, 0.22805124, 0.88940838, 0.15591312,\n",
-       "       0.33670767, 0.65928848, 0.20756763, 0.78137393, 0.58387163,\n",
-       "       0.15794193, 0.54833038, 0.94741398, 0.41959997, 0.37176809,\n",
-       "       0.13279341, 0.74273767, 0.25731075, 0.17763094, 0.58995429])"
+       "array([0.5488135 , 0.71518937, 0.60276338, 0.54488318, 0.4236548 ,\n",
+       "       0.64589411, 0.43758721, 0.891773  , 0.96366276, 0.38344152,\n",
+       "       0.79172504, 0.52889492, 0.56804456, 0.92559664, 0.07103606,\n",
+       "       0.0871293 , 0.0202184 , 0.83261985, 0.77815675, 0.87001215])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "794b34fd-5a13-4b26-aa23-eff1d1be59ad",
    "metadata": {},
    "outputs": [],
@@ -64,18 +65,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "c444e857-7dfd-412f-950b-b073f40a7fae",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.4 , 0.66, 0.23, 0.89, 0.16, 0.34, 0.66, 0.21, 0.78, 0.58, 0.16,\n",
-       "       0.55, 0.95, 0.42, 0.37, 0.13, 0.74, 0.26, 0.18, 0.59])"
+       "array([0.55, 0.72, 0.6 , 0.54, 0.42, 0.65, 0.44, 0.89, 0.96, 0.38, 0.79,\n",
+       "       0.53, 0.57, 0.93, 0.07, 0.09, 0.02, 0.83, 0.78, 0.87])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,9 +179,82 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a1932b94-e615-49e6-b40d-e39ad0003475",
+   "metadata": {},
+   "source": [
+    "**mean, variance and standard deviation**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "efa19cce-765f-42da-bac4-713bdb6e5ce6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(np.float64(0.49601999999999996), np.float64(0.49601999999999996))"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "formatedmatrix.mean(),np.mean(formatedmatrix) # mean finds the sum of all the values in a matrix divided by the number of all the points in the matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "84f6020f-bcaf-4623-a05d-697c556c8502",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.0844421596)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# variance is a measure of avg difference btw the mean and all the other points\n",
+    "np.var(formatedmatrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "b24617db-96f6-4f6b-85c3-45ec229832fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.29058933153163075)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# std gives the sq-root of the variance\n",
+    "np.sqrt(np.var(formatedmatrix))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8df63374-4063-43de-a772-6b064ac6499c",
+   "id": "f71dfa37-f4b4-4025-9edf-206daf6d8387",
    "metadata": {},
    "outputs": [],
    "source": []
