--- a/numpy/dot_product.ipynb
+++ b/numpy/dot_product.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "id": "63d79171-d93a-4cef-aa48-fd17f537508f",
    "metadata": {},
    "outputs": [],
@@ -137,9 +137,103 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a0e59e7d-0afd-4bfd-ad5d-d686624646dd",
+   "metadata": {},
+   "source": [
+    "**reshape vs transpose**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "35c53331-4ee9-48d4-a2cd-359ff18e344f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# a reshape matrix method changes the dimensions of a matrix: for example\n",
+    "mat_1 = np.random.randint(2,9,size=(3,4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "939a0d39-6dfd-4a19-bd7d-6743255eaf6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[6, 7, 2, 5],\n",
+       "       [5, 5, 3, 5],\n",
+       "       [7, 4, 6, 8]], dtype=int32)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mat_1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "a2f59430-eadb-4696-954a-ec61a4e2a7b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3, 4)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.shape(mat_1) # the original dimensions are 3*4; two 2D dimensional matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "89c4d66a-fd90-4024-957a-19cd01e11530",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mat_2_reshaped = mat_1.reshape(6,2,1)# now this is a 3Dimensional matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "8297f161-6500-4dba-9e2f-42c73b512ef0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6, 2, 1)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.shape(mat_2_reshaped)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eba9526f-0ee4-4448-bcc7-611ef5c8f248",
+   "id": "44edbd7e-3a02-4e5f-a073-88f730e2b661",
    "metadata": {},
    "outputs": [],
    "source": []
