--- a/numpy/dot_product.ipynb
+++ b/numpy/dot_product.ipynb
@@ -231,9 +231,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7bf5fa19-7dd7-4a29-b0cd-5d039c369de2",
+   "metadata": {},
+   "source": [
+    "**transpose**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "3b19eb3f-0a7e-4d9d-9fa7-78c3c77ab7af",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[6, 5, 7],\n",
+       "       [7, 5, 4],\n",
+       "       [2, 3, 6],\n",
+       "       [5, 5, 8]], dtype=int32)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# the transpose is the row/col replacement while performing a matrix .product operation in numpy\n",
+    "mat_1.T"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44edbd7e-3a02-4e5f-a073-88f730e2b661",
+   "id": "9507c759-cc8a-461b-af5b-c6397d85913e",
    "metadata": {},
    "outputs": [],
    "source": []
