--- a/numpy/comparisionOPerator.ipynb
+++ b/numpy/comparisionOPerator.ipynb
@@ -109,9 +109,94 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "218baab3-5ee3-43e0-8f30-52ef1bf650d7",
+   "metadata": {},
+   "source": [
+    "**sorting array**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "5f4778f0-cd60-49fb-9533-b026bb421af2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 2, 3, 4, 6],\n",
+       "       [1, 1, 2, 3, 5],\n",
+       "       [1, 4, 5, 5, 6]], dtype=int32)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sort(matrix1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "07e106b3-0a82-4bf7-a263-4db475307745",
+   "metadata": {},
+   "source": [
+    "**sorting by rows and columns**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "07f2bdd7-24e2-421d-8505-ffcd72e134d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 2, 3, 4, 6],\n",
+       "       [1, 1, 2, 3, 5],\n",
+       "       [1, 4, 5, 5, 6]], dtype=int32)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sort(matrix1,axis = 1) #sorting by row, by default"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "1c5061ab-c7a4-4ffd-b984-7b72ba65f8a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[4, 0, 1, 1, 3],\n",
+       "       [5, 1, 2, 2, 5],\n",
+       "       [5, 4, 3, 6, 6]], dtype=int32)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sort(matrix1,axis = 0) #sorting by column"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47644b7d-902e-45b2-a1da-c5da82259bde",
+   "id": "4163325c-ff34-48c5-a0f7-b935f9cafced",
    "metadata": {},
    "outputs": [],
    "source": []
