converting object and string datatypes into int

--- a/scikit learn/changing data types.ipynb
+++ b/scikit learn/changing data types.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "id": "4ea272a5-dbfc-4b47-826f-66b2e0fd9464",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "id": "8c63e477-840e-4cc5-b55b-b0d112fd4555",
    "metadata": {},
    "outputs": [
@@ -62,6 +62,7 @@
        "      <th>Memory</th>\n",
        "      <th>Price (USD)</th>\n",
        "      <th>Internet Network</th>\n",
+       "      <th>Generation</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -73,6 +74,7 @@
        "      <td>12GB</td>\n",
        "      <td>1099</td>\n",
        "      <td>5G</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -82,6 +84,7 @@
        "      <td>6GB</td>\n",
        "      <td>999</td>\n",
        "      <td>5G</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -91,6 +94,7 @@
        "      <td>8GB</td>\n",
        "      <td>599</td>\n",
        "      <td>5G</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -100,6 +104,7 @@
        "      <td>16GB</td>\n",
        "      <td>649</td>\n",
        "      <td>5G</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -109,6 +114,7 @@
        "      <td>4GB</td>\n",
        "      <td>249</td>\n",
        "      <td>4G LTE</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -118,6 +124,7 @@
        "      <td>4GB</td>\n",
        "      <td>199</td>\n",
        "      <td>4G LTE</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -127,6 +134,7 @@
        "      <td>6GB</td>\n",
        "      <td>299</td>\n",
        "      <td>5G</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -136,6 +144,7 @@
        "      <td>8GB</td>\n",
        "      <td>899</td>\n",
        "      <td>4G LTE</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -145,6 +154,7 @@
        "      <td>12GB</td>\n",
        "      <td>799</td>\n",
        "      <td>5G</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -154,50 +164,118 @@
        "      <td>12GB</td>\n",
        "      <td>749</td>\n",
        "      <td>5G</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         Phone Name Manufacturer Storage Memory  Price (USD) Internet Network\n",
-       "0  Galaxy S22 Ultra      Samsung   512GB   12GB         1099               5G\n",
-       "1     iPhone 14 Pro        Apple   256GB    6GB          999               5G\n",
-       "2           Pixel 7       Google   128GB    8GB          599               5G\n",
-       "3       OnePlus 10T      OnePlus   256GB   16GB          649               5G\n",
-       "4     Redmi Note 11       Xiaomi   128GB    4GB          249           4G LTE\n",
-       "5      Moto G Power     Motorola    64GB    4GB          199           4G LTE\n",
-       "6        Nokia G400        Nokia   128GB    6GB          299               5G\n",
-       "7           P50 Pro       Huawei   256GB    8GB          899           4G LTE\n",
-       "8      Oppo Find X5         Oppo   256GB   12GB          799               5G\n",
-       "9          Vivo X80         Vivo   512GB   12GB          749               5G"
+       "         Phone Name Manufacturer Storage Memory  Price (USD) Internet Network  \\\n",
+       "0  Galaxy S22 Ultra      Samsung   512GB   12GB         1099               5G   \n",
+       "1     iPhone 14 Pro        Apple   256GB    6GB          999               5G   \n",
+       "2           Pixel 7       Google   128GB    8GB          599               5G   \n",
+       "3       OnePlus 10T      OnePlus   256GB   16GB          649               5G   \n",
+       "4     Redmi Note 11       Xiaomi   128GB    4GB          249           4G LTE   \n",
+       "5      Moto G Power     Motorola    64GB    4GB          199           4G LTE   \n",
+       "6        Nokia G400        Nokia   128GB    6GB          299               5G   \n",
+       "7           P50 Pro       Huawei   256GB    8GB          899           4G LTE   \n",
+       "8      Oppo Find X5         Oppo   256GB   12GB          799               5G   \n",
+       "9          Vivo X80         Vivo   512GB   12GB          749               5G   \n",
+       "\n",
+       "   Generation  \n",
+       "0           5  \n",
+       "1           4  \n",
+       "2           3  \n",
+       "3           5  \n",
+       "4           6  \n",
+       "5           7  \n",
+       "6           4  \n",
+       "7           3  \n",
+       "8           6  \n",
+       "9           5  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "phone_ds = pd.read_csv(\"./../phones.csv\")\n",
+    "#add an extra column\n",
+    "phone_ds[\"Generation\"] = np.array([5,4,3,5,6,7,4,3,6,5])\n",
     "phone_ds"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "48a8f407-6dc4-4352-9e2a-4e907db198a2",
+   "execution_count": 11,
+   "id": "4e6d448b-fa2d-462a-ac55-678347c8e5be",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "phone_ds['Storage'] = phone_ds['Storage'].str.replace(\"GB\",\"\",regex=False).astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "dcc89978-977b-478d-b5e1-c49a1058811b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "phone_ds['Memory'] = phone_ds['Memory'].str.replace(\"GB\",\"\",regex=False).astype(int)\n",
+    "# method-2 for the same opeartion\n",
+    "phone_ds['Memory'] = phone_ds['Memory'].str.replace(\"GB\",\"\",regex=False).astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "96e04fd4-da1f-4930-807d-aa6d5d04d453",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Phone Name          object\n",
+       "Manufacturer        object\n",
+       "Storage              int64\n",
+       "Memory               int64\n",
+       "Price (USD)          int64\n",
+       "Internet Network    object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "phone_ds.dtypes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ba13d4c-0599-491d-837c-6251ef68cf46",
+   "metadata": {},
+   "source": [
+    "### sklearn models donot train on datasets having String or Object Data types, if you try to train the upper dataset you will get error\n",
+    "### so what we will do here is to encode the \"strings\" and \"object\" data types, using oneHotEncoding technique of SKLearn library"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e6d448b-fa2d-462a-ac55-678347c8e5be",
+   "id": "437356e8-f8a2-4e13-8e89-8a9bb1a07976",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# import the desired model \n",
+    "from sklearn.ensemble import RandomForestRegressor\n"
+   ]
   }
  ],
  "metadata": {
