--- a/scikit learn/scikit_learn_part2.ipynb
+++ b/scikit learn/scikit_learn_part2.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "id": "4ea272a5-dbfc-4b47-826f-66b2e0fd9464",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "id": "8c63e477-840e-4cc5-b55b-b0d112fd4555",
    "metadata": {},
    "outputs": [
@@ -196,7 +196,7 @@
        "9           5  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "id": "4e6d448b-fa2d-462a-ac55-678347c8e5be",
    "metadata": {},
    "outputs": [],
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "id": "dcc89978-977b-478d-b5e1-c49a1058811b",
    "metadata": {},
    "outputs": [],
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "id": "b8a4dd16-c241-4ddd-be8e-b485954ebde2",
    "metadata": {},
    "outputs": [],
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 6,
    "id": "96e04fd4-da1f-4930-807d-aa6d5d04d453",
    "metadata": {},
    "outputs": [
@@ -259,7 +259,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 7,
    "id": "31ad17aa-cd1a-4947-9dbb-a2b48ab73883",
    "metadata": {},
    "outputs": [],
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 8,
    "id": "244cc82e-44f6-451f-ac9c-a5be03ed7ee8",
    "metadata": {},
    "outputs": [],
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 9,
    "id": "437356e8-f8a2-4e13-8e89-8a9bb1a07976",
    "metadata": {},
    "outputs": [
@@ -311,7 +311,7 @@
        "'does not work until you encode and then transform the column having string values into float'"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 10,
    "id": "bf95cdae-3b87-4918-88e9-49a12a58c95d",
    "metadata": {},
    "outputs": [
@@ -414,7 +414,7 @@
        "9  <Compressed Sparse Row sparse matrix of dtype ..."
       ]
      },
-     "execution_count": 51,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 12,
    "id": "bbc1dabe-c794-4aae-b2b6-03d9a3c2a365",
    "metadata": {},
    "outputs": [
@@ -825,7 +825,7 @@
        "9                 False               True                False  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -845,25 +845,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 19,
    "id": "a4b10532-74bd-41ae-b94d-f47ac32aa530",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.622570238095238"
+       "0.5436026666666667"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x_train,x_test,y_train,y_test = train_test_split(transformed_X,Y,test_size=0.3)\n",
+    "x_train,x_test,y_train,y_test = train_test_split(transformed_X,Y,test_size=0.35)\n",
     "RFR = RandomForestRegressor()\n",
-    "RFR.fit(x_train,y_train)\n",
+    "RFR.fit(x_train,y_train);\n",
     "RFR.score(x_test,y_test)\n"
    ]
   },
