--- a/scikit learn/chooseModel - Copy.ipynb
+++ b/scikit learn/chooseModel - Copy.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "3468b99d-4d8c-441e-b695-19de888bb690",
+   "metadata": {},
+   "source": [
+    "# Two different sklearn Regression Models are implemented"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7c2d1bb1-c115-454e-b20f-4e56785c0928",
    "metadata": {},
    "source": [
-    "# SKLEARN PROJECT A to Z, let us talk some fundamentals"
+    "### SKLEARN PROJECT A to Z, let us talk some fundamentals"
    ]
   },
   {
@@ -13,12 +21,12 @@
    "id": "e8c67553-1529-47f9-aa7d-3b259ecd17f6",
    "metadata": {},
    "source": [
-    "# Load a built-in dataset from sklearn"
+    "### Load a built-in dataset from sklearn"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "5ac0db62-c120-4f71-9399-f48b62cc0cc8",
    "metadata": {},
    "outputs": [],
@@ -34,12 +42,12 @@
    "id": "9580b066-fd4f-493a-bc95-3a439315fb8a",
    "metadata": {},
    "source": [
-    "## Turn the ds into a dataframe for model training"
+    "### Turn the ds into a dataframe for model training"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "c11434ed-db2d-4c94-ad55-4cbe790df907",
    "metadata": {},
    "outputs": [
@@ -132,7 +140,7 @@
        "4       0  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,12 +156,12 @@
    "id": "fa77472e-e2d6-4102-9095-9c2618235fe3",
    "metadata": {},
    "source": [
-    "## Split the data"
+    "### Split the data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "id": "1c2b0dbe-7b42-467d-94c7-c21466ec062b",
    "metadata": {},
    "outputs": [],
@@ -162,7 +170,7 @@
     "x = iris_df.drop(\"target\",axis=1)\n",
     "y = iris_df[\"target\"]\n",
     "np.shape(x),np.shape(y)\n",
-    "X_TRAIN, X_TEST, Y_TRAIN, Y_TEST = train_test_split(x,y,test_size = 0.2)"
+    "X_TRAIN, X_TEST, Y_TRAIN, Y_TEST = train_test_split(x,y,test_size = 0.3)"
    ]
   },
   {
@@ -170,22 +178,22 @@
    "id": "e9c7cd44-4bf1-4ee8-a460-8dc4d2ff32fd",
    "metadata": {},
    "source": [
-    "## Choose and train the model"
+    "### Choose and train the model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "id": "02c3edd0-bd6b-462f-b8d9-af4cdc831981",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.9634171493354166, 0.9188457972109684)"
+       "(0.9248943790096777, 0.9378121707684384)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,8 +216,8 @@
    "id": "a291b85e-f019-445d-a27c-fc234f6ee0c9",
    "metadata": {},
    "source": [
-    "### TRAINING ACCURACY: 0.9188\n",
-    "### VALIDATION ACCURACY: 0.9634"
+    "#### TRAINING ACCURACY: 0.9188\n",
+    "#### VALIDATION ACCURACY: 0.9634"
    ]
   },
   {
@@ -217,7 +225,7 @@
    "id": "14513d0f-6feb-4092-90b7-6b35a35c2999",
    "metadata": {},
    "source": [
-    "# SUMMARY"
+    "### SUMMARY"
    ]
   },
   {
@@ -225,7 +233,7 @@
    "id": "159f81af-019a-498a-9f2b-3fc59a3a8ce1",
    "metadata": {},
    "source": [
-    "## if you get validation Accuracy slightly higher than training accuracy: it means"
+    "#### if you get validation Accuracy slightly higher than training accuracy: it means"
    ]
   },
   {
@@ -233,17 +241,56 @@
    "id": "d3d03f5d-a517-408c-9db8-fbb0ac6ebc96",
    "metadata": {},
    "source": [
-    "## There is potential Regularization during training to prevent overfitting\n",
-    "## Data Augmentation might be applied to make the training task slightly harder resulting in a low score\n",
-    "## There might be differences in metric Calculation i.e. training accuracy is often an avg calcualted over each batch diring an epoch\n",
-    "## Consider for example if the validation set contains simple Samples than the training set\n",
-    "## and a less common issue could be that of underfitting!"
+    "### There is potential Regularization during training to prevent overfitting\n",
+    "### Data Augmentation might be applied to make the training task slightly harder resulting in a low score\n",
+    "### There might be differences in metric Calculation i.e. training accuracy is often an avg calcualted over each batch diring an epoch\n",
+    "### Consider for example if the validation set contains simple Samples than the training set\n",
+    "### and a less common issue could be that of underfitting!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b3a33286-2fba-44dd-87fe-8c239d0832e7",
+   "metadata": {},
+   "source": [
+    "## Choosing even better model to yield Greater Accuracy\n",
+    "# The Random Forest Regressor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "9bdddf8c-cc13-43c2-804d-5ef728640f5e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.9921616140051238, 0.9543262195121951)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "\n",
+    "# create an object of the randomforestregressor class\n",
+    "rf_model = RandomForestRegressor()\n",
+    "\n",
+    "# TRAIN ON DATA\n",
+    "rf_model.fit(X_TRAIN,Y_TRAIN)\n",
+    "\n",
+    "# ACCURACY TRAIN VS TEST\n",
+    "rf_model.score(X_TRAIN,Y_TRAIN), rf_model.score(X_TEST,Y_TEST)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4b4dc3b-c77d-4760-9a64-e4b815ea49f2",
+   "id": "1f1fe896-313e-443e-93fa-d949408e9392",
    "metadata": {},
    "outputs": [],
    "source": []
